fixed a label causing scrollbar to appear

--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
    License: none (public domain)
 */
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 html,
 body,
@@ -122,7 +122,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
+  content: "";
   content: none;
 }
 table {
@@ -157,7 +157,7 @@ table {
     rgba(89, 18, 97, 1) 100%
   );
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#34055d",endColorstr="#591261",GradientType=1);
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .container {
@@ -167,9 +167,9 @@ table {
   grid-template-columns: 3fr 1.3fr;
   grid-template-rows: 0fr 1fr 0fr;
   grid-template-areas:
-    'nv nv'
-    'mn mn' /* mn fl */
-    'ft ft';
+    "nv nv"
+    "mn mn" /* mn fl */
+    "ft ft";
 }
 
 .container nav {
@@ -260,7 +260,7 @@ table {
   height: 36px;
   border-radius: 50%;
   border: 0.5px white solid;
-  background-image: url('./img/pp.jpe');
+  background-image: url("./img/pp.jpe");
 }
 
 #board {
@@ -269,7 +269,7 @@ table {
   display: grid;
   grid-template-rows: 0fr 0fr 1fr;
   background-color: rgba(255, 255, 255, 0.1);
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 #board #project {
@@ -487,7 +487,7 @@ table {
 #addTodoModal,
 #addProjectModal {
   flex-direction: column;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   border: none;
   border-radius: 10px;
   transition: cubic-bezier(0.25, 0.1, 0.25, 1) 250ms;
@@ -567,7 +567,7 @@ table {
   display: block;
   font-size: 0.8rem;
   font-weight: 500;
-  width: 20vw;
+
   letter-spacing: 1.5px;
   margin-bottom: 2px;
 }
@@ -733,4 +733,8 @@ table {
   border-radius: 5px;
   box-sizing: border-box;
   padding: 0.5em;
+}
+
+#projectTitle {
+  color: red;
 }
